--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -689,7 +689,7 @@ CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-cifsd=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 
-CONFIG_PACKAGE_luci-app-cpufreq=y
+#CONFIG_PACKAGE_luci-app-cpufreq=y
 
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
